<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_coordinationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="72dp"
                android:gravity="bottom"
                android:lines="3"
                android:maxLines="2"
                android:text="@string/game_title_hint"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageButton
                android:id="@+id/view_buttonBack"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:tint="?attr/actionMenuTextColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.izzan.gamingkiroku.ViewItemActivity">

            <ImageView
                android:id="@+id/view_iconFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:alpha=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_iconPlatform"
                app:srcCompat="@drawable/ic_trophy" />

            <TextView
                android:id="@+id/view_textViewFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="72dp"
                android:text="@string/label_finished"
                app:layout_constraintBottom_toBottomOf="@+id/view_iconFinish"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_iconFinish"
                app:layout_constraintVertical_bias="0.533" />

            <ImageView
                android:id="@+id/view_iconPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:alpha=".5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_iconSubGenre"
                app:srcCompat="@drawable/ic_game_boy" />

            <TextView
                android:id="@+id/view_textViewPlatform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="72dp"
                android:text="@string/label_platform"
                app:layout_constraintBottom_toBottomOf="@+id/view_iconPlatform"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_iconPlatform"
                app:layout_constraintVertical_bias="0.533" />

            <ImageView
                android:id="@+id/view_iconSubGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:alpha=".5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_iconGenre"
                app:srcCompat="@drawable/ic_sub_genre" />

            <TextView
                android:id="@+id/view_textViewSubGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="72dp"
                android:text="@string/label_sub_genre"
                app:layout_constraintBottom_toBottomOf="@+id/view_iconSubGenre"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_iconSubGenre"
                app:layout_constraintVertical_bias="0.533" />

            <ImageView
                android:id="@+id/view_iconGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:alpha=".5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_ratingBar"
                app:srcCompat="@drawable/ic_genre" />

            <TextView
                android:id="@+id/view_textViewGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="72dp"
                android:text="@string/label_genre"
                app:layout_constraintBottom_toBottomOf="@+id/view_iconGenre"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_iconGenre"
                app:layout_constraintVertical_bias="0.533" />

            <RatingBar
                android:id="@+id/view_ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/view_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:src="@drawable/ic_create_black_24dp"
        android:tint="?android:attr/textColorPrimaryInverse"
        app:backgroundTint="@color/colorAccent2"
        app:elevation="6dp"
        app:fabSize="mini"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
